// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`правильно логирует показы васа при рендере 1`] = `
Object {
  "category": "cars",
  "event": "VAS_SHOW",
  "from": "new-lk-same-offer",
  "offerId": "1085562758-1970f439",
  "originalPrice": undefined,
  "price": 2199,
  "serviceId": "all_sale_activate",
}
`;

exports[`правильно рисует компонент 1`] = `
<Modal
  animation={true}
  className="SameOfferDialog"
  closer={true}
  onRequestHide={[Function]}
  visible={true}
  zIndexGroupLevel={20}
>
  <div
    className="SameOfferDialog__Content"
  >
    <div
      className="SameOfferDialog__Info"
    >
      <div
        className="SameOfferDialog__InfoTop"
      >
        <h1
          className="SameOfferDialog__Title"
        >
          Повторное размещение
        </h1>
        <p
          className="SameOfferDialog__Description"
        >
          Вы уже размещали объявление о продаже этого авто недавно.
                            Повторное размещение на 60 дней стоит 
          <Price
            currency="RUR"
            free="Бесплатно"
            key="price"
            price={2199}
            separator=" "
          />
          .
           Старое объявление вы можете восстановить бесплатно.
        </p>
      </div>
      <div
        className="SameOfferDialog__InfoBottom"
      >
        <Button
          className="SameOfferDialog__Button"
          color="white"
          onClick={[Function]}
          size="xl"
          type="button"
          width="default"
        >
          Восстановить старое
        </Button>
        <Button
          className="SameOfferDialog__Button"
          color="blue"
          onClick={[Function]}
          size="xl"
          type="button"
          width="default"
        >
          <Price
            currency="RUR"
            free="Бесплатно"
            prefix="Разместить за"
            price={2199}
            separator=" "
          />
        </Button>
      </div>
    </div>
    <SaleInfoSection
      offer={
        Object {
          "foo": "тут должен быть объект с похожим оффером",
        }
      }
    />
  </div>
</Modal>
`;

exports[`при клике на кнопку "активировать новый" передаст правильные параметры в модал оплаты 1`] = `
Object {
  "category": "cars",
  "from": "new-lk-same-offer",
  "offerId": "1085562758-1970f439",
  "services": Array [
    Object {
      "service": "all_sale_activate",
    },
  ],
  "shouldShowSuccessTextAfter": true,
  "shouldUpdateOfferAfter": true,
  "successText": "Объявление активировано",
}
`;

exports[`при клике на кнопку "активировать новый" правильно залогирует событие клика 1`] = `
Object {
  "category": "cars",
  "event": "VAS_CLICK",
  "from": "new-lk-same-offer",
  "offerId": "1085562758-1970f439",
  "originalPrice": undefined,
  "price": 2199,
  "serviceId": "all_sale_activate",
}
`;
